Fix css on Firefox.

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -4,6 +4,7 @@
   font-size: 16px;
   line-height: 22px;
   box-sizing: border-box;
+  -moz-box-sizing: border-box;
 }
 
 body {
