--- a/app/assets/stylesheets/settings.less
+++ b/app/assets/stylesheets/settings.less
@@ -4,11 +4,13 @@ section.settings {
 
     div {
         width: 100%;
+        display: flex;
         display: -webkit-flex;
 
         input {
             height:  24px;
             width: 1037px;
+            flex: 1;
             -webkit-flex: 1;
             margin-right: 5px;
         }
@@ -21,9 +23,6 @@ section.settings {
         }
 
         button.upload {
-            width: 20px;
-            padding-left:   4px;
-            padding-right: 19px;
             margin-right: 0;
         }
     }
